--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = paul@cuciureanu.com
-	name = Paul Cuciureanu
+	email = liviu@cuciureanu.com
+	name = Liviu Cuciureanu
 	signingkey = 34174D23F04CE669
 [core]
 	autocrlf = false
